--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,9 +1,8 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: MyString
-  memo: MyText
-
-two:
-  title: MyString
-  memo: MyText
+test_book:
+  title: "テスト用ブック"
+  memo: "おもろいよお"
+# two:
+#   title: MyString
+#   memo: MyText
