--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,3 +12,7 @@
 alice:
   email: alice@example.com
   encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
+
+bob:
+  email: bob@example.com
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
