--- a/test/fixtures/relationships.yml
+++ b/test/fixtures/relationships.yml
@@ -1,9 +1,5 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# one:
-#   following_id: 1
-#   follower_id: 1
-
-# two:
-#   following_id: 1
-#   follower_id: 1
+test_follow:
+  following: bob
+  follower: alice
